# sent

./: .cproject  .gitignore  .gitlab-ci.yml  .mxproject  .project  Cargo.toml  README.md  log.txt  test_input-capture_halleffect Debug.launch  test_input-capture_halleffect.ioc
.cargo/: config
Core/Inc/: main.h
Core/Src/: main.c  stm32f1xx_hal_msp.c
Debug/: makefile  test_input-capture_halleffect.elf  test_input-capture_halleffect.list  test_input-capture_halleffect.map
Debug/Core/Src/: main.su  stm32f1xx_hal_msp.su  subdir.mk
examples/: ic_mutex.rs  input_capture.rs  input_capture_v1.rs  interupt_counting.rs  interupt_falling_edge.rs  main.rs  tim_sent_v2.rs  timer_imput_capture.rs  transmitter.rs
src/: lib.rs  receiver.rs  sent.rs  transmitter.rs
