[package]
edition = "2018"
name = "sent-driver"
description = "A driver for SENT protocol"
categories = ["embedded", "no-std"]
version = "0.1.0"
license = "0BSD"


[dependencies]
embedded-hal = "0.2.3"
asm-delay = "0.9.0"

[dev-dependencies]
cortex-m = "0.6.0"
cortex-m-rt = "0.6.10"
#cortex-m-semihosting = "0.3.3"
#panic-semihosting = "0.5.6"
panic-rtt-target = { version = "0.1.0", features = ["cortex-m"] }
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
# panic-halt = "0.2.0"
#panic-abort = "0.3.2"

[dependencies.stm32f1]
version = "0.13.0"
features = ["stm32f103", "rt"]

[dependencies.stm32f1xx-hal]
features = ["stm32f103", "rt", "medium"]
version = "^0.6.1"


# Access to the stm32f103 HAL.
#[dependencies.stm32f1xx-hal]
# we use "medium density" device
#features = ["stm32f103", "rt", "medium"]
#version = "^0.6.1"


